# keybindings-parser

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs  masks.rs
tests/: check_handle.rs  create_configuration.rs
